@@ -18,3 +18,4 @@ import ftw.builder.user
 import ftw.builder.zcml
 import ftw.builder.package
 import ftw.builder.genericsetup
+import ftw.builder.portlets
