@@ -1,8 +1,10 @@
+import transaction
+from ftw.builder.testing import BUILDER_FUNCTIONAL_TESTING
 from ftw.builder.testing import BUILDER_INTEGRATION_TESTING
-from plone.app.testing import TEST_USER_ID
-from plone.app.testing import TEST_USER_NAME
 from plone.app.testing import login
 from plone.app.testing import setRoles
+from plone.app.testing import TEST_USER_ID
+from plone.app.testing import TEST_USER_NAME
 from unittest2 import TestCase
 
 
@@ -14,3 +16,16 @@ class IntegrationTestCase(TestCase):
         self.portal = self.layer['portal']
         setRoles(self.portal, TEST_USER_ID, ['Manager'])
         login(self.portal, TEST_USER_NAME)
+
+
+class FunctionalTestCase(TestCase):
+
+    layer = BUILDER_FUNCTIONAL_TESTING
+
+    def setUp(self):
+        self.portal = self.layer['portal']
+        self.request = self.layer['request']
+
+    def grant(self, *roles):
+        setRoles(self.portal, TEST_USER_ID, list(roles))
+        transaction.commit()
