@@ -5,7 +5,8 @@ Changelog
 1.6.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add support for building portlets.
+  [mbaechtold]
 
 
 1.6.3 (2015-05-28)
